<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/brain2"
        android:scaleType="centerCrop"
        android:contentDescription="@string/calc_background" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:useDefaultMargins="true"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:background="@color/teal_200"
            android:gravity="end"
            android:paddingHorizontal="@dimen/result_padding_h"
            android:paddingVertical="@dimen/result_padding_v"
            android:text="@string/default_result_text"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_division"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_1"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_2"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_3"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_multiplication"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_4"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_5"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_6"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_7"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_8"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_9"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/btn_0"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dot"
            android:textSize="@dimen/button_digit" />

        <Button
            android:id="@+id/btn_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_result"
            android:textSize="@dimen/button_digit" />

    </GridLayout>
</FrameLayout>